force-app/main/default/objects/Evaluation__c/fields/Comments100__c.field-meta.xml
<CustomField>
    <fullName>Comments100__c</fullName>
    <description>Captures comments related to a specific evaluation</description>
    <inlineHelpText>Indicates comments related to a specific evaluation</inlineHelpText>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>