force-app/main/default/objects/Evaluation__c/fields/Communicates_effectively_with_co_workers__c.field-meta.xml
<CustomField>
    <fullName>Communicates_effectively_with_co_workers__c</fullName>
    <description>Communicates effectively with co-workers</description>
    <inlineHelpText>Communicates effectively with co-workers</inlineHelpText>
    <label>Communicates effectively with co-workers</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>