force-app/main/default/objects/Evaluation__c/fields/Complete_vehicle_safety_inspection__c.field-meta.xml
<CustomField>
    <fullName>Complete_vehicle_safety_inspection__c</fullName>
    <description>Complete vehicle safety inspection</description>
    <inlineHelpText>Complete vehicle safety inspection</inlineHelpText>
    <label>Complete vehicle safety inspection</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>