force-app/main/default/objects/Evaluation__c/fields/Corrects_any_hazardous_conditions__c.field-meta.xml
<CustomField>
    <fullName>Corrects_any_hazardous_conditions__c</fullName>
    <description>Corrects any hazardous conditions</description>
    <inlineHelpText>Corrects any hazardous conditions</inlineHelpText>
    <label>Corrects any hazardous conditions</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>