force-app/main/default/objects/Evaluation__c/fields/Dem_control_stopping_starting_load__c.field-meta.xml
<CustomField>
    <fullName>Dem_control_stopping_starting_load__c</fullName>
    <description>Dem control stopping &amp; starting load</description>
    <inlineHelpText>Dem control stopping &amp; starting load</inlineHelpText>
    <label>Dem control stopping &amp; starting load</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>