force-app/main/default/objects/Evaluation__c/fields/Demonstrates_good_judgment__c.field-meta.xml
<CustomField>
    <fullName>Demonstrates_good_judgment__c</fullName>
    <description>Demonstrates good judgment</description>
    <inlineHelpText>Demonstrates good judgment</inlineHelpText>
    <label>Demonstrates good judgment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>