force-app/main/default/objects/Evaluation__c/fields/Deposits_load_safely__c.field-meta.xml
<CustomField>
    <fullName>Deposits_load_safely__c</fullName>
    <description>Deposits load safely</description>
    <inlineHelpText>Deposits load safely</inlineHelpText>
    <label>Deposits load safely</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>