force-app/main/default/objects/Evaluation__c/fields/Does_not_overextend_reach_or_climb_out__c.field-meta.xml
<CustomField>
    <fullName>Does_not_overextend_reach_or_climb_out__c</fullName>
    <description>Does not overextend reach or climb out</description>
    <inlineHelpText>Does not overextend reach or climb out</inlineHelpText>
    <label>Does not overextend reach or climb out</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>