force-app/main/default/objects/Evaluation__c/fields/Does_not_perform_unsafe_acts_w_equipment__c.field-meta.xml
<CustomField>
    <fullName>Does_not_perform_unsafe_acts_w_equipment__c</fullName>
    <description>Does not perform unsafe acts w/equipment</description>
    <inlineHelpText>Does not perform unsafe acts w/equipment</inlineHelpText>
    <label>Does not perform unsafe acts w/equipment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>