force-app/main/default/objects/Evaluation__c/fields/Does_not_proceed_until_load_is_lowered__c.field-meta.xml
<CustomField>
    <fullName>Does_not_proceed_until_load_is_lowered__c</fullName>
    <description>Does not proceed until load is lowered</description>
    <inlineHelpText>Does not proceed until load is lowered</inlineHelpText>
    <label>Does not proceed until load is lowered</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>