force-app/main/default/objects/Evaluation__c/fields/Does_not_use_excessive_tilt_or_actions__c.field-meta.xml
<CustomField>
    <fullName>Does_not_use_excessive_tilt_or_actions__c</fullName>
    <description>Does not use excessive tilt or actions</description>
    <inlineHelpText>Does not use excessive tilt or actions</inlineHelpText>
    <label>Does not use excessive tilt or actions</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>