force-app/main/default/objects/Evaluation__c/fields/Drives_in_reverse_if_load_too_large__c.field-meta.xml
<CustomField>
    <fullName>Drives_in_reverse_if_load_too_large__c</fullName>
    <description>Drives in reverse if load too large</description>
    <inlineHelpText>Drives in reverse if load too large</inlineHelpText>
    <label>Drives in reverse if load too large</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>