force-app/main/default/objects/Evaluation__c/fields/Engages_load_properly__c.field-meta.xml
<CustomField>
    <fullName>Engages_load_properly__c</fullName>
    <description>Engages load properly</description>
    <inlineHelpText>Engages load properly</inlineHelpText>
    <label>Engages load properly</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>