force-app/main/default/objects/Evaluation__c/fields/Engages_outriggers_using_pads_when_req__c.field-meta.xml
<CustomField>
    <fullName>Engages_outriggers_using_pads_when_req__c</fullName>
    <description>Engages outriggers using pads when req.</description>
    <inlineHelpText>Engages outriggers using pads when req.</inlineHelpText>
    <label>Engages outriggers using pads when req.</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>