force-app/main/default/objects/Evaluation__c/fields/Ensures_appropriate_lighting_present__c.field-meta.xml
<CustomField>
    <fullName>Ensures_appropriate_lighting_present__c</fullName>
    <description>Ensures appropriate lighting present prior to entering trailer</description>
    <inlineHelpText>Ensures appropriate lighting present prior to entering trailer</inlineHelpText>
    <label>Ensures appropriate lighting present</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>