force-app/main/default/objects/Evaluation__c/fields/Ensures_established_working_zone_is_safe__c.field-meta.xml
<CustomField>
    <fullName>Ensures_established_working_zone_is_safe__c</fullName>
    <description>Ensures established working zone is safe</description>
    <inlineHelpText>Ensures established working zone is safe</inlineHelpText>
    <label>Ensures established working zone is safe</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>