force-app/main/default/objects/Evaluation__c/fields/Ensures_no_overhead_obstructions__c.field-meta.xml
<CustomField>
    <fullName>Ensures_no_overhead_obstructions__c</fullName>
    <description>Ensures no overhead obstructions</description>
    <inlineHelpText>Ensures no overhead obstructions</inlineHelpText>
    <label>Ensures no overhead obstructions</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>