force-app/main/default/objects/Evaluation__c/fields/Ensures_trailer_wheelchocks_are_in_place__c.field-meta.xml
<CustomField>
    <fullName>Ensures_trailer_wheelchocks_are_in_place__c</fullName>
    <description>Ensures trailer wheel chocks are in place</description>
    <inlineHelpText>Ensures trailer wheel chocks are in place</inlineHelpText>
    <label>Ensures trailer wheelchocks are in place</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>