force-app/main/default/objects/Evaluation__c/fields/Enters_bucket_safely__c.field-meta.xml
<CustomField>
    <fullName>Enters_bucket_safely__c</fullName>
    <description>Enters bucket safely</description>
    <inlineHelpText>Enters bucket safely</inlineHelpText>
    <label>Enters bucket safely</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>