force-app/main/default/objects/Evaluation__c/fields/Establishes_safe_working_zone_around_veh__c.field-meta.xml
<CustomField>
    <fullName>Establishes_safe_working_zone_around_veh__c</fullName>
    <description>Establishes safe working zone around veh</description>
    <inlineHelpText>Establishes safe working zone around veh</inlineHelpText>
    <label>Establishes safe working zone around veh</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>