force-app/main/default/objects/Evaluation__c/fields/Evaluation_Comments__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Comments__c</fullName>
    <label>Evaluation Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>