force-app/main/default/objects/Evaluation__c/fields/Evaluation_Date__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Captures the date of the evaluation.</description>
    <inlineHelpText>Indicates the date of the evaluation.</inlineHelpText>
    <label>Evaluation Date</label>
    <type>Date</type>
</CustomField>