force-app/main/default/objects/Evaluation__c/fields/Evaluator__c.field-meta.xml
<CustomField>
    <fullName>Evaluator__c</fullName>
    <description>Pulls down field from Service Appointment for use with Conga.</description>
    <formula>If( Service_Appointment__r.Assigned_Service_Resource__r.FirstName == &apos;OSG&apos;,
TEXT(Service_Appointment__r.Contractor__c),
Service_Appointment__r.Assigned_Service_Resource__r.FirstName +&quot; &quot;+ Service_Appointment__r.Assigned_Service_Resource__r.LastName
)</formula>
    <label>Evaluator</label>
    <type>Text</type>
</CustomField>