force-app/main/default/objects/Evaluation__c/fields/First_lift_load_slowly_to_assure_balance__c.field-meta.xml
<CustomField>
    <fullName>First_lift_load_slowly_to_assure_balance__c</fullName>
    <description>First lift load slowly to assure balance</description>
    <inlineHelpText>First lift load slowly to assure balance</inlineHelpText>
    <label>First lift load slowly to assure balance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>