force-app/main/default/objects/Evaluation__c/fields/Fork_angle_adj_properly_prior_to_load__c.field-meta.xml
<CustomField>
    <fullName>Fork_angle_adj_properly_prior_to_load__c</fullName>
    <description>Fork angle adjusted properly prior to engaging load</description>
    <inlineHelpText>Fork angle adjusted properly prior to engaging load</inlineHelpText>
    <label>Fork angle adj. properly prior to load</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>