force-app/main/default/objects/Evaluation__c/fields/Forks_do_not_contact_rack_objects__c.field-meta.xml
<CustomField>
    <fullName>Forks_do_not_contact_rack_objects__c</fullName>
    <description>Forks do not contact rack or objects when lowering</description>
    <inlineHelpText>Forks do not contact rack or objects when lowering</inlineHelpText>
    <label>Forks do not contact rack/objects</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>