force-app/main/default/objects/Evaluation__c/fields/Forks_load_does_not_contact_rack__c.field-meta.xml
<CustomField>
    <fullName>Forks_load_does_not_contact_rack__c</fullName>
    <description>Forks or load does not contact rack when depositing</description>
    <inlineHelpText>Forks or load does not contact rack when depositing</inlineHelpText>
    <label>Forks/load does not contact rack</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>