force-app/main/default/objects/Evaluation__c/fields/Forks_set_in_proper_travel_position1__c.field-meta.xml
<CustomField>
    <fullName>Forks_set_in_proper_travel_position1__c</fullName>
    <description>Forks set in proper travel position</description>
    <inlineHelpText>Forks set in proper travel position</inlineHelpText>
    <label>Forks set in proper travel position</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>