force-app/main/default/objects/Evaluation__c/fields/Fuel_Source__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Source__c</fullName>
    <description>Captures the fuel source(s) of the Lift Device Type</description>
    <inlineHelpText>Indicates the fuel source(s) of the Lift Device Type</inlineHelpText>
    <label>Fuel Source</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Propane</fullName>
            </value>
            <value>
                <fullName>Electric</fullName>
            </value>
            <value>
                <fullName>Gas/Diesel</fullName>
            </value>
            <value>
                <fullName>Legacy</fullName>
            </value>
            <value>
                <fullName>Natural Gas</fullName>
            </value>
            <value>
                <fullName>Diesel,Gas</fullName>
                <isActive>false</isActive>
                <label>Diesel,Gas</label>
            </value>
            <value>
                <fullName>Diesel/Gas</fullName>
                <isActive>false</isActive>
                <label>Diesel/Gas</label>
            </value>
            <value>
                <fullName>Electric Propane Diesel/Gas</fullName>
                <isActive>false</isActive>
                <label>Electric Propane Diesel/Gas</label>
            </value>
            <value>
                <fullName>Electric,Diesel,Gas</fullName>
                <isActive>false</isActive>
                <label>Electric,Diesel,Gas</label>
            </value>
            <value>
                <fullName>Electric,Propane</fullName>
                <isActive>false</isActive>
                <label>Electric,Propane</label>
            </value>
            <value>
                <fullName>Electric,Propane,Diesel,Gas</fullName>
                <isActive>false</isActive>
                <label>Electric,Propane,Diesel,Gas</label>
            </value>
            <value>
                <fullName>Eletric</fullName>
                <isActive>false</isActive>
                <label>Eletric</label>
            </value>
            <value>
                <fullName>Gas /Diesal</fullName>
                <isActive>false</isActive>
                <label>Gas /Diesal</label>
            </value>
            <value>
                <fullName>Manual</fullName>
                <isActive>false</isActive>
                <label>Manual</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Other,Manual</fullName>
                <isActive>false</isActive>
                <label>Other,Manual</label>
            </value>
            <value>
                <fullName>Pneumatic</fullName>
                <isActive>false</isActive>
                <label>Pneumatic</label>
            </value>
            <value>
                <fullName>Propane,Diesel,Gas</fullName>
                <isActive>false</isActive>
                <label>Propane,Diesel,Gas</label>
            </value>
            <value>
                <fullName>Propane,Electric</fullName>
                <isActive>false</isActive>
                <label>Propane,Electric</label>
            </value>
            <value>
                <fullName>Propane,Electric,Diesel,Gas</fullName>
                <isActive>false</isActive>
                <label>Propane,Electric,Diesel,Gas</label>
            </value>
            <value>
                <fullName>Propoane</fullName>
                <isActive>false</isActive>
                <label>Propoane</label>
            </value>
            <value>
                <fullName>propane,Propane</fullName>
                <isActive>false</isActive>
                <label>propane,Propane</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>