force-app/main/default/objects/Evaluation__c/fields/Honks_horn_at_blind_corners_intersect__c.field-meta.xml
<CustomField>
    <fullName>Honks_horn_at_blind_corners_intersect__c</fullName>
    <description>Honks horn at blind corners and intersections</description>
    <inlineHelpText>Honks horn at blind corners and intersections</inlineHelpText>
    <label>Honks horn at blind corners &amp; intersect.</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>