force-app/main/default/objects/Evaluation__c/fields/Honks_horn_makes_eye_contact_w_peds1__c.field-meta.xml
<CustomField>
    <fullName>Honks_horn_makes_eye_contact_w_peds1__c</fullName>
    <description>Honks horn and makes eye contact with pedestrians</description>
    <inlineHelpText>Honks horn and makes eye contact with pedestrians</inlineHelpText>
    <label>Honks horn &amp; makes eye contact w/ peds.</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>