force-app/main/default/objects/Evaluation__c/fields/Honks_horn_prior_to_exiting_trailer__c.field-meta.xml
<CustomField>
    <fullName>Honks_horn_prior_to_exiting_trailer__c</fullName>
    <description>Honks horn prior to exiting trailer</description>
    <inlineHelpText>Honks horn prior to exiting trailer</inlineHelpText>
    <label>Honks horn prior to exiting trailer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>