force-app/main/default/objects/Evaluation__c/fields/Inspects_anchour_b4_connecting_lanyard__c.field-meta.xml
<CustomField>
    <fullName>Inspects_anchour_b4_connecting_lanyard__c</fullName>
    <description>Inspects anchour b4 connecting lanyard</description>
    <inlineHelpText>Inspects anchour b4 connecting lanyard</inlineHelpText>
    <label>Inspects anchour b4 connecting lanyard</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>