force-app/main/default/objects/Evaluation__c/fields/Inspects_harness_lanyard_shockabsorber__c.field-meta.xml
<CustomField>
    <fullName>Inspects_harness_lanyard_shockabsorber__c</fullName>
    <description>Inspects harness lanyard &amp; shockabsorber</description>
    <inlineHelpText>Inspects harness lanyard &amp; shockabsorber</inlineHelpText>
    <label>Inspects harness lanyard &amp; shockabsorber</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>